# compliance-checker

./: README.md  main.py  pyproject.toml
src/: api.py  llm.py  prompt.py  service.py  utils.py  web_extractor.py
