[tool.poetry]
name = "seiright"
version = "0.1.0"
description = ""
authors = ["Rohan <rohanya.76426@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
fastapi = "^0.115.4"
beautifulsoup4 = "^4.12.3"
uvicorn = "^0.32.0"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
